--- a/tex/2011/3/2.tex
+++ b/tex/2011/3/2.tex
@@ -19,7 +19,7 @@ If \(\frac{p}{q}\) is a rational root of \(f\), \(f\left(\frac{p}{q}\right) = 0\
 \[
     a_k p^k q^{n - k - 1} = a_n p^n q^{-1} = \frac{p^n}{q}
 \]
-must be an integer. But since \(p\) and \(q\) are coprime, this can be an integer if and only if \(q = 1\).
+must be an integer. But since \(p\) and \(q\) are co-prime, this can be an integer if and only if \(q = 1\).
 
 Therefore, \(\frac{p}{q} = p\) is an integer as well, and any rational root to \(f(x) = 0\) must be an integer.
 
