--- a/tex/2013/3/5.tex
+++ b/tex/2013/3/5.tex
@@ -55,7 +55,7 @@
 
           If a prime \(p \divides d\), then \(p \divides d^b\), and hence \(p \divides b^a\).
 
-          Since \(b^a = b b^{a - 1}\), if \(p\) does not divide \(b\), this means \(p\) and \(b\) must be coprime (since \(p\) is a prime), then \(p\) must divide \(b^{a - 1}\), and repeating this argument eventually reaches \(p\) dividing \(b^{a - (a - 1)}\) which is a contradiction. So \(p\) must divide \(b\).
+          Since \(b^a = b b^{a - 1}\), if \(p\) does not divide \(b\), this means \(p\) and \(b\) must be co-prime (since \(p\) is a prime), then \(p\) must divide \(b^{a - 1}\), and repeating this argument eventually reaches \(p\) dividing \(b^{a - (a - 1)}\) which is a contradiction. So \(p\) must divide \(b\).
 
           Let \(d = p^m d'\), and we must have \(p\) not divide \(d'\). Similarly, let \(b = p^n b'\), and we must have \(p\) does not divide \(b'\).
 
