--- a/tex/2016/3/5.tex
+++ b/tex/2016/3/5.tex
@@ -31,7 +31,7 @@
           \[
               \gcd\left(P_{m + 1, 2m + 1}, m!\right) = 1,
           \]
-          i.e. \(P_{m + 1, 2m + 1}\) are coprime.
+          i.e. \(P_{m + 1, 2m + 1}\) are co-prime.
 
           Therefore, given that \(\binom{2m + 1}{m} = \frac{(2m + 1)(2m)(2m - 1) \cdots (m + 2)}{m!}\) is an integer, we must therefore have
           \[
